Switching to builtin android http client.  Removing lots of jars, will speed up jenkins.  Parsing token date from server.  Parsing last modified date for observations.  Smarter observation requests.